<resources>
    <string name="app_name">CloudSpill</string>
    <string name="starting">Starting up...</string>
    <string name="download_error">Downloading failed :(</string>
    <string name="download_offline">No connection to server</string>

    <!-- button labels -->
    <string name="sync">Sync now</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="gallery">Gallery</string>
    <string name="rebuild_db">Rebuild Database</string>

    <!-- Folder screen -->
    <string name="title_activity_folders">Folders</string>
    <string name="folder_name_hint">Folder name</string>
    <string name="folder_path_hint">Folder path</string>
    <string name="edit_folder_title">Edit folder...</string>
    <string name="confirm_folder_delete">Do you want to delete this folder?</string>

    <!-- Server screen -->
    <string name="title_activity_servers">Servers</string>
    <string name="server_name_hint">Server name</string>
    <string name="server_url_hint">Server URL</string>
    <string name="edit_server_title">Edit server...</string>
    <string name="confirm_server_delete">Do you want to delete this server?</string>


    <!-- Strings related to Settings -->

    <string name="title_activity_settings">Settings</string>

    <string name="pref_user">Username</string>
    <string name="pref_user_summ">The user to use when connecting to the server</string>
    <string name="pref_user_default">guest</string>

    <string name="pref_pass">Password</string>
    <string name="pref_pass_summ">The password to use when connecting to the server</string>

    <string name="pref_dl_path">Download path</string>
    <string name="pref_dl_path_summ">Where to place downloaded media</string>
    <string name="pref_dl_path_default">/storage/emulated/0/CloudSpill</string>

    <string name="pref_freespace">Free space</string>
    <string name="pref_freespace_summ">When free space gets lower than that, CloudSpill starts deleting files</string>
    <string name="pref_freespace_default">1000M</string>

    <string name="pref_mobile_upload">Upload policy</string>
    <string name="pref_mobile_upload_summ">May I upload your media if there\'s no Wifi?</string>

    <!-- Filter window -->

    <string name="edit_filter_title">Filter</string>
    <string name="filter_from">From</string>
    <string name="filter_to">To</string>
    <string name="filter_by">By</string>
    <string name="filter_sort">Sort by</string>
    <string name="filter_date_btn">Pick a date</string>
    <string name="item_tags">Tags</string>
    <string name="item_by">By %s</string>

</resources>
