<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="pref_user"
        android:title="@string/pref_user"
        android:summary="@string/pref_user_summ"
        android:defaultValue="@string/pref_user_default"/>
    <EditTextPreference
        android:key="pref_dl_path"
        android:title="@string/pref_dl_path"
        android:summary="@string/pref_dl_path_summ"
        android:defaultValue="@string/pref_dl_path_default"/>
    <EditTextPreference
        android:key="pref_freespace"
        android:title="@string/pref_freespace"
        android:summary="@string/pref_freespace_summ"
        android:defaultValue="@string/pref_freespace_default" />
    <ListPreference
        android:key="pref_mobile_upload"
        android:title="@string/pref_mobile_upload"
        android:summary="@string/pref_mobile_upload_summ"
        android:entries="@array/pref_mobile_upload_entries"
        android:entryValues="@array/pref_mobile_upload_entryValues" />
</PreferenceScreen>